testsuite/tests/rename/should_fail/T15828.stderr

T15828.hs:9:3: error:
    • Type indexes must match class instance head
      Expected: T (Maybe a) _
        Actual: T (Maybe a1) b
    • In the type instance declaration for ‘T’
      In the instance declaration for ‘C (Maybe a)’
